[package]
name = "document-filler"
version = "0.1.0"
authors = ["Rémi Parpaillon <remi.parpaillon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.1.0"
reqwest = { version = "0.10.9", features = [] }
tokio = { version = "0.2", features = ["full"] }
